Add services and switch between Celsius and Fahrenheit
New www/js/services.js file
Add WeatherService service

--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -7,17 +7,19 @@
  </ion-header-bar>
 
  <ion-content>
- 
+
 
   <label class="item item-input item-select item-clear">
     <div class="input-label">
       Temperature
     </div>
-    <select>
-      <option>F</option>
-      <option selected>C</option>
+    <select ng-model='WeatherService.temp'>
+      <option value='f'>F</option>
+      <option selected value='c'>C</option>
     </select>
   </label>
+
+
 
    <label class="item item-input item-select item-clear">
   <div class="input-label">
