Remove 'Back' button and default background
When new city is chosen the main view is replaced with the new one
and 'Back' button is not displayed any more.
There is no more default background image that flicks briefly when
new city is chosen.

--- a/www/templates/addlocation.html
+++ b/www/templates/addlocation.html
@@ -19,9 +19,8 @@
     <div ng-if="city" >
       <ion-list>
         <ion-item class="white" ng-repeat="location in details"
-                ui-sref="app.home({ citywoeid: location.woeid, cityname: location.name})"
-                ng-click="closeAddLocation(); clearCity();">
-          {{location.name}}, {{location.country}}, {{location.woeid}}
+                ng-click="closeAddLocation({ citywoeid: location.woeid, cityname: location.name}); clearCity();">
+        {{location.name}}, {{location.country}}, {{location.woeid}}
         </ion-item>
       </ion-list>
     </div>
